--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aos": "^2.3.4",
     "glightbox": "^3.2.0",
     "jquery": "^3.7.1",
+    "slim-select": "^2.8.1",
     "swiper": "^11.0.5"
   }
 }
